Box alignment fix

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -34,11 +34,14 @@ strong i.fa {
     margin-right:5px;
 }
 
-.profile img {
-    max-width: 75px;
-    max-height: 75px;
-    margin:0 10px;
-    border: 4px solid #7799c5;
+.profile{
+    padding-right:30px; 
+    img {
+        max-width: 75px;
+        max-height: 75px;
+        margin:0 10px;
+        border: 4px solid #7799c5;
+    }
 }
 
 .m-top {
